[gd_scene load_steps=9 format=2]

[ext_resource path="res://enemy2.gd" type="Script" id=1]
[ext_resource path="res://texture/knight quest/enemy2.png" type="Texture" id=2]
[ext_resource path="res://Sprite1.gd" type="Script" id=3]
[ext_resource path="res://texture/knight quest/explosion.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.8408, 27.9524 )

[sub_resource type="Animation" id=2]
resource_name = "boomer"
length = 2.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.69918, 10 )

[sub_resource type="Animation" id=4]
resource_name = "explosion"
length = 0.52
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21, 0.24, 0.27, 0.3, 0.33, 0.36, 0.39, 0.42, 0.45, 0.48 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16 ]
}

[node name="boomer" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.332169, -0.0179443 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.361788, 0.332127 )
scale = Vector2( 0.0871983, 0.0871983 )
texture = ExtResource( 2 )
vframes = 2
hframes = 3
frame = 3
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
playback_process_mode = 0
anims/boomer = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.349648, 0.524475 )
shape = SubResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 4.54467, 11.406 )
scale = Vector2( 0.225578, 0.225578 )
texture = ExtResource( 4 )
vframes = 5
hframes = 4
frame = 16

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2"]
anims/explosion = SubResource( 4 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="Sprite2/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
